tests/paczka2/big_fuzzy/81278762.err
Error in line 9: S983 A229 7,83
Error in line 13: vCM8QE0IO S983 44,8
Error in line 3: UCUFG A229 61,4
Error in line 21: RlvNbBdZc S744 13,6
Error in line 18: S983 A229 28,8
Error in line 26: S983 A510 -1,3
Error in line 33: UCUFG A510 14,9
Error in line 34: UCUFG S983 18,7
Error in line 35: vCM8QE0IO S983 40,4
Error in line 25: S983 A510 18,7
Error in line 53: 91Q A510 30,6
Error in line 43: vCM8QE0IO A510 39,4
Error in line 55: 91Q S744 94,5
Error in line 64: RlvNbBdZc S983 53,4
Error in line 65: jtezU A229 86,1
Error in line 75: jtezU S744 38,4
Error in line 78: UCUFG A229 18,6
Error in line 86: RlvNbBdZc S983 53,58
Error in line 77: S983 A510 17,6
Error in line 93: jtezU A510 80,5
Error in line 94: RlvNbBdZc S983 203,9
Error in line 117: S983 S744 -1,8
Error in line 114: S983 S744 3,1
Error in line 143: Sp83 A510 87,p
Error in line 140: S983 A229 87,6
Error in line 137: vCM8QE0IO A229 65,2
Error in line 152: vCM8QE0IO S744 47,3
Error in line 153: vCM8QE0IO A510 54,5
Error in line 138: jtezU A510 4,4
Error in line 170: S983 A229 82,7
Error in line 181: vCM8QE0IO A510 30,4
Error in line 190: 91Q S983 0,4
Error in line 191: 91Q A229 44,5
Error in line 200: UCUFG S744 89,2
Error in line 207: vCM8QE0IO S983 57,91
Error in line 211: hEo8Nz S744 44,6
Error in line 205: UCUFG A510 16,8
Error in line 224: RlvNbBdZc S983 16,5
Error in line 210: S983 S744 226,0
Error in line 239: vCM8QE0IO S744 168,5
Error in line 243: hEo8Nz A229 70,00
Error in line 235: 91Q S744 11,2
